# Capstone_Project

./: .gitattributes  .gitignore  Dockerfile  Preprocess.py  README.md  evaluate.py  fields_evaluation.py  infer.py  main.py  requirement.txt  requirements.txt  testHTML.py
config/: collection_medicine.yaml  collection_user_info.yaml  common_words_list.yaml  create_yaml_file.py  doc_config.yaml  form_name_list.yaml  init_result.json  mapping.json  name_of_column.yaml
config/create_config_file/: create_yaml_file.py
config/raw_template_form/: don_xin_cap_ban_sao_tu_so_goc_bang_tot_nghiep.json  don_xin_chuyen_diem.json  don_xin_hoc_mon_thay_the.json  don_xin_mien_thi.json  don_xin_mien_thi_anh_van_dau_ra.json  don_xin_nhan_diem_i_diem_chua_hoan_tat.json  don_xin_xet_chuyen_trinh_do_dao_tao.json
config/template_form/: don_xin_bao_luu_diem.json  don_xin_bao_luu_diem_anh_sang_viet.json  don_xin_cap_ban_sao_tu_so_goc_bang_tot_nghiep.json  don_xin_chuyen_diem.json  don_xin_chuyen_diem_ngoai_ngu.json  don_xin_hoc_mon_thay_the.json  don_xin_mien_thi copy.json  don_xin_mien_thi.json  don_xin_mien_thi_anh_van_dau_ra.json  don_xin_nhan_diem_i_diem_chua_hoan_tat.json  don_xin_xet_chuyen_trinh_do_dao_tao.json
model/detection_model/: inference.pdiparams
src/: info_extracter.py  ocr.py  paper_ocr.py  table_creater.py  template_creater.py  test.py
src/BRS/: Dockerfile  config.json  runScanner.sh  sendAPI.py
src/BRS/src/: Makefile.am  scanimage.c  stiff.c  stiff.h
src/DBMS/: db_manager.py  template_creater.py
test/: test.ipynb  test.py  test_roi.py  test_roi_raw.py
(+66 files in other folders)
